WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156915
image-set doesn't work inside CSS Variables
https://bugs.webkit.org/show_bug.cgi?id=156915
Summary
image-set doesn't work inside CSS Variables
Dave Hyatt
Reported
2016-04-22 09:58:34 PDT
image-set doesn't work inside CSS Variables
Attachments
Patch
(6.23 KB, patch)
2016-04-22 10:01 PDT
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-04-22 09:58:55 PDT
<
rdar://problem/25473972
> -webkit-image-set doesn't work inside CSS variables
Dave Hyatt
Comment 2
2016-04-22 10:01:40 PDT
Created
attachment 277069
[details]
Patch
Dave Hyatt
Comment 3
2016-04-22 11:27:10 PDT
Fixed in
r199884
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug