Source/WebCore:  -webkit-image-set doesn't work inside CSS variables https://bugs.webkit.org/show_bug.cgi?id=156915 <rdar://problem/25473972>

Reviewed by Zalan Bujtas.

Added new tests in fast/hidpi.

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::equals):
(WebCore::CSSPrimitiveValue::buildParserValue):

LayoutTests:
-webkit-image-set doesn't work inside CSS variables
https://bugs.webkit.org/show_bug.cgi?id=156915
<rdar://problem/25473972>

Reviewed by Zalan Bujtas.

* fast/hidpi/image-srcset-simple-in-variable-1x-expected.txt: Added.
* fast/hidpi/image-srcset-simple-in-variable-1x.html: Added.
* fast/hidpi/image-srcset-simple-in-variable-2x-expected.txt: Added.
* fast/hidpi/image-srcset-simple-in-variable-2x.html: Added.



Canonical link: https://commits.webkit.org/175014@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199884 268f45cc-cd09-0410-ab3c-d52691b4dbfc